--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,36 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* MAIN */
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+}
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.col {
+    width: calc(100% / 7 - 10rem / 7);
+    background-color: aquamarine;
+    margin: .1rem;
+    /* Debug */
+    border: 1px solid white;
+    min-width: 246px;
+    min-height: 146px;
+}
