refactoring: col margin

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,8 @@
 .col {
     width: calc(100% / 7 - 10rem / 7);
     background-color: aquamarine;
-    margin: .1rem;
+    margin: .2rem;
+    margin-bottom: .4rem;
     /* Debug */
     border: 1px solid white;
     min-width: 246px;
