--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 
 /* MAIN */
 
+body {
+    font-family: sans-serif;
+}
+
 .wrapper {
     display: flex;
     justify-content: center;
@@ -15,6 +19,23 @@
     width: 100%;
     height: 100vh;
     background-color: black;
+}
+
+.wrapper span {
+    position: absolute;
+    top: .5rem;
+    background-color: #4a4a4a;
+    color: white;
+    padding: .3rem;
+    border-radius: 10px;
+}
+
+.wrapper .speaker-view {
+    right: 2.5rem;
+}
+
+.wrapper .maximize {
+    right: 0;
 }
 
 .container {
