add: actions in large footer container and meeting container

--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,6 @@ body {
 .angle-up {
     display: flex;
     align-items: center;
-    margin-left: 1rem;
-    margin-right: 1.5rem;
     font-size: .8rem;
 }
 
@@ -101,13 +99,30 @@ footer {
     height: 8%;
     background-color: #222222;
     text-align: center;
-    padding: .5rem;
 }
 
 .footer-container {
     display: flex;
+    padding: 1rem;
 }
 
 footer .large {
+    display: flex;
+    justify-content: center;
     flex-grow: 2;
+}
+
+footer .action {
+    margin-right: 2rem;
+}
+
+.footer-container.meeting {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #4a4a4a;
+}
+
+.footer-container.meeting span {
+    color: red;
 }
