--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 /* MAIN */
 
 main .speaker-view, main .maximize {
-    position: absolute;
+    position: fixed;
     top: .5rem;
     z-index: 999;
     background-color: #4a4a4a;
@@ -70,7 +70,7 @@ main .speaker-view, main .maximize {
     position: relative;
     overflow-y: auto;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     margin: 0 auto;
 }
 
@@ -80,6 +80,7 @@ main .speaker-view, main .maximize {
     flex-wrap: wrap;
     justify-content: center;
     padding: 1rem;
+    margin-top: 3rem;
 }
 
 .col {
